@@ -13,8 +13,8 @@ TO BE DECIDED (owner)
 
 TODO (owner)
 
+- update at least the user-visible copyrights with year 2003 (kaiv)
 - capture_client has pthread_mutex_lock() in its process() (pbd)
-- jack_deactive called unconditionally in jack_client_close (kaiv)
 - server<->libjack interface version handshake (kaiv)
 - figure out how to have pools of buffers for ports by type (pbd)
 - proper handling of client return values in libjack (kaiv)
@@ -30,6 +30,7 @@ TO THINK ABOUT
 
 CLOSED (date,who,comment)
 
+- jack_deactive called unconditionally in jack_client_close (05.02.2003, kaiv, fixed)
 - call time client before all others (28.01.2003, kaiv, another solution)
 
 -----------------------------------------------------------------------
