@@ -1,3 +1,8 @@
+2003-02-05  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
+
+	* client.c (jack_set_buffer_size_callback): This function is now 
+	deprecated.
+
 2002-12-20  Paul Davis  <paul>
 
 	* error.h (jack_set_error_function): added
